@@ -1,4 +1,6 @@
 MD5 94fdaed3d2b12024de61b41dc8091775 kworldwatch-3.4.0_beta1.ebuild 425
-MD5 c5144be944a734ccca35187d9b12a345 ChangeLog 460
+MD5 6b7c092ac5f1c814e4468f036e31958b kworldwatch-3.4.0_beta1-r1.ebuild 509
+MD5 547cbb688e197edf5e6ad78a7185440e ChangeLog 637
 MD5 14889ab75f97d76e58b0c1154e7683a9 metadata.xml 161
+MD5 5224e7a7ada9a24776f67cfcd38bd62d files/digest-kworldwatch-3.4.0_beta1-r1 212
 MD5 5224e7a7ada9a24776f67cfcd38bd62d files/digest-kworldwatch-3.4.0_beta1 212
