@@ -1,0 +1,3 @@
+MD5 67e013c82557256ea04ec926bf8c9160 kdetoys-3.3.90.tar.bz2 2869409
+MD5 390e6c0ec7d240061330190f690906a0 kdetoys-3.3.90-3.3.91.tar.xdelta 58339
+MD5 8e3cfb32ebfd2f7e508c2da108ff4373 kdetoys-3.3.91.tar.bz2 2877581
