@@ -1,0 +1,17 @@
+# Copyright 1999-2005 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kworldwatch/kworldwatch-3.4.0_beta1-r1.ebuild,v 1.1 2005/02/04 20:26:04 danarmak Exp $
+
+KMNAME=kdetoys
+MAXKDEVER=$PV
+KM_DEPRANGE="$PV $MAXKDEVER"
+inherit kde-meta
+
+DESCRIPTION="KDE program that displays the part of the Earth lit up by the Sun"
+KEYWORDS="~x86"
+IUSE=""
+DEPEND=""
+
+# kworldwatch is more commonly known as kworldclock
+KMEXTRA="doc/kworldclock"
+
