@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kworldwatch
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kworldwatch/ChangeLog,v 1.1 2005/01/15 02:24:40 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kworldwatch/ChangeLog,v 1.2 2005/02/04 20:26:04 danarmak Exp $
+
+*kworldwatch-3.4.0_beta1-r1 (04 Feb 2005)
+
+  04 Feb 2005; Dan Armak <danarmak@gentoo.org>
+  +kworldwatch-3.4.0_beta1-r1.ebuild:
+  Install the documentation, which was missing.
 
 *kworldwatch-3.4.0_beta1 (15 Jan 2005)
 
